--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     },
     "dependencies": {
         "@mantine/core": "^7.12.2",
+        "@mantine/form": "^7.12.2",
         "@mantine/hooks": "^7.12.2",
+        "@mantine/notifications": "^7.12.2",
         "json-server": "^1.0.0-beta.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
