--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "server": "json-server --watch db.json --port 8000"
+        "server": "json-server --watch db.json --port 8000",
+        "start": "concurrently \"npm run server\" \"npm run dev\""
     },
     "dependencies": {
         "@mantine/core": "^7.12.2",
@@ -27,6 +28,7 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
+        "concurrently": "^9.0.1",
         "eslint": "^9.9.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
